Update from day to session.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
-layout: about
-title: About
+layout: index
+title: Index
 ---
 
-  <p>This GP Summer School will focus on Gaussian processes and Uncertainty Quantificiation. It will take place in Sheffield, UK from 12th to 15th of September 2016</p>
+  <p>This is a base theme for easily creating conference and workshop pages with Jekyll.</p>
 
